src/test/deca/syntax/valid/created/sans_objet/flottant.deca
// Description:
//    Programme minimaliste utilisant un flottant.
//
// Resultats:
//    connaitre tous les flottants
//
// Historique:
//    cree le 11/01/2024

{
 float a = 0.1234;
 float b =0xFf.3bP+01f;
 float c =987.245f;
 float d = 0.122;
 
 x=0000.14F;
 x=10.1E-21 + 20.1;

}