src/test/deca/syntax/invalid/created/sans_objet/fichier.deca
// Description:
//    Programme minimaliste utilisant un fichier.
//
// Resultats:
//    erreur: ligne 13
//
// Historique:
//    cree le 11/01/2024



{
    #include test.txt
}